writing part updated

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,29 +62,28 @@
         <div class="service">
           <h3>Web Design</h3>
           <p>
-            Disigning is the first step of building a website and I am highly interested in this creative 
-            step of Full-Stack web-development. A website should not only have an apealing look, it also
-            needs to tell a great story. 
+            Designing is the essential step to build a fully functional website. 
+            When desinging a product, I focus on UX/UI principles to make sure the experience of a client is optimal.
+            I use tools like Adobe photoshop to make logos and fix images, and Figma to create wireframes and prototypes.
+
           </p>
           </div>
 
           <div class="service">
           <h3>Web Development</h3>
           <p>
-            There are many variations of passages of Lorem Ipsum available, but
-            the majority have suffered alteration in some form, by injected
-            humour, or randomised words which don't look even slightly
-            believable. If you are going to use a passage of Lorem Ipsum, you
-            need to be sure there isn't anything embarrassing hidden in the
-            middle of text. All the Lorem Ipsum generators on the Internet tend
-            to repeat predefined chunks as necessary.
+            In development phase. I code the user interface with HTML and CSS. I focus on the adaptive and responsive design.
+            I use Express js to build single page or multiple page web apps based on Node js.
+            In collaboration, I follow Agile methodoloty, and use tools like Git, GitHub, Google Docs, Miro.com, and Discord
+            to communicate effectively with partners.
           </p></div>
 
           <div class="service">
           <h3>Database</h3>
           <p>
-            Database stores all the information of your users, customers, and inventories ect. A good 
-            designed database will keep all your informatin well organized and easy maintain.
+            Database is another essential part for a functional web app, it stores all the information of the users, 
+            customers, and inventories ect. A good designed database is organized and easy to maintain. 
+            I use MySQL Database to connect to the website data, and I love designing a database and writing SQL queries.
           </p>
         </div>
 
@@ -188,17 +187,7 @@
             <img class="contact-icon" src="/icons/github.svg" />
             <p class="contact github-name">Cocoandjane</p>
           </li>
-        </ul>
-
-        <div class="buttons">
-        <button class="download download-resume">
-            <img class="download-icon" src="/icons/download.svg" alt="downlaod icon"> Download my resume
-        </button>
-
-        <button class="download download-portfolio">
-            <img class="download-icon" src="/icons/download.svg" alt="downlaod icon"> Download this portfolio as PDF
-        </button>
-      </div>
+        </ul> 
       <img class="footer__img" src="/images/me-footer.jpeg">
       </div>
     </footer>
