--- a/public/style.css
+++ b/public/style.css
@@ -161,7 +161,6 @@ header {
   bottom: 0;
   right: 0;
   z-index: 100;
-  padding: 2em;
 
   transform: translateX(100%);
   transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
@@ -174,7 +173,6 @@ header {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  right: -2em;
   margin: 0;
   padding: 0;
 }
@@ -244,12 +242,8 @@ header {
   right: 0;
 }
 
-.hamburger::before {
-  top: 6px;
-}
-.hamburger::after {
-  bottom: 6px;
-}
+.hamburger::before { top: 6px; }
+.hamburger::after { bottom: 6px; }
 /* intro section */
 
 .intro {
