--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,8 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 :root {
@@ -136,7 +138,7 @@ h3 {
 /* header */
 
 .logo {
-  max-width: 70px;
+  max-width: 3rem;
 }
 
 .logo--img {
@@ -144,106 +146,107 @@ h3 {
 }
 
 header {
-  display: flex;
-  justify-content: space-between;
-  padding: 1em;
+    background-color: var(--clr-accent-one);
+  /* background-image: linear-gradient(
+    rgba(145, 209, 215, 66%),
+    rgba(155, 88, 226, 66%)
+  );; */
 }
 
-.nav {
-  position: fixed;
-  background-image: linear-gradient(
-    rgba(145, 209, 215, 95%),
-    rgba(155, 88, 226, 60%)
-  );
-  color: var(--clr-light);
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  z-index: 100;
-
-  transform: translateX(100%);
-  transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
-}
-
-.nav__list {
-  list-style: none;
-  display: flex;
-  height: 100%;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-}
-
-.nav__link {
-  color: inherit;
-  font-weight: var(--fw-bold);
-  font-size: var(--fs-h3);
-  text-decoration: none;
+.nav__link{
+    color: white;
+    text-decoration: none;
+    transition: 0.7s ease;
 }
 
 .nav__link:hover {
-  color: var(--clr-accent-two);
+    color: var(--clr-accent-two);
 }
 
-.nav-toggle {
-  padding: 0.25em;
-  background: transparent;
-  border: 0;
-  cursor: pointer;
-  position: absolute;
-  right: 1em;
-  top: 1em;
-  z-index: 1000;
+li {
+    list-style: none;
 }
 
-.nav_open .nav {
-  transform: translateX(0);
+.navbar {
+    min-height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 24px;
+
 }
 
-.nav_open .nav-toggle {
-  position: fixed;
-}
-
-.nav_open .hamburger {
-  transform: rotate(0.625turn);
-}
-
-.nav_open .hamburger::before {
-  transform: rotate(90deg) translateX(-6px);
-}
-
-.nav_open .hamburger::after {
-  opacity: 0;
+.nav__list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 60px;
 }
 
 .hamburger {
-  display: block;
-  position: fixed;
+    display: none;
+    cursor: pointer;
 }
 
-.hamburger,
-.hamburger::before,
-.hamburger::after {
-  background: var(--clr-accent-two);
-  width: 2em;
-  height: 3px;
-  border-radius: 1em;
-  transition: transform 250ms ease-in-out;
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: var(--clr-accent-two);
 }
 
-.hamburger::before,
-.hamburger::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
+@media(max-width: 768px) {
+    .hamburger {
+        display: block;
+    }
+
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .nav__list {
+        position: fixed;
+        color: var(--clr-dark);
+        right: -100%;
+        top: 70px;
+        bottom: 0;
+        gap:0;
+        flex-direction: column;
+        background-color: var(--clr-dark);
+        width: 170px;
+        text-align: center;
+        transition: 0.3s;
+    }
+
+    .nav__item {
+        margin: 10px 0;
+    }
+
+    .nav__list.active {
+        right: 0;
+    }
 }
 
-.hamburger::before { top: 6px; }
-.hamburger::after { bottom: 6px; }
+
+
+
+
+
+
+
+
+
 /* intro section */
 
 .intro {
