--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,30 +13,38 @@
   </head>
   <body>
     <header>
-      <div class="logo">
-        <img class="logo--img"
-          src="/images/JL_Logo_blue&orange._91d1d7&e27458 Medium.jpeg"
-          alt="logo"
-        />
-      </div>
-      <button class="nav-toggle" aria-label="toggle navigation">
-        <span class="hamburger"></span>
-      </button>
-      <nav class="nav">
+      <nav class="navbar">
+
+        <div class="logo">
+          <img class="logo--img"
+            src="/images/JL_Logo_blue&orange._91d1d7&e27458 Medium.jpeg"
+            alt="logo" />
+        </div>
+
         <ul class="nav__list">
           <li class="nav__item">
             <a href="/" class="nav__link">Home</a>
           </li>
+
           <li class="nav__item">
             <a href="#services" class="nav__link">My services</a>
           </li>
+
           <li class="nav__item">
             <a href="#about" class="nav__link">About me</a>
           </li>
+
           <li class="nav__item">
             <a href="#work" class="nav__link">My work</a>
           </li>
+          
         </ul>
+
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
       </nav>
     </header>
 
