--- a/public/style.css
+++ b/public/style.css
@@ -241,13 +241,6 @@ li {
 
 
 
-
-
-
-
-
-
-
 /* intro section */
 
 .intro {
@@ -323,9 +316,13 @@ li {
   margin-bottom: 4em;
 }
 
+.service h3 {
+    margin: 0.5em;
+}
+
 .service {
   max-width: 500px;
-  margin: 0 auto;
+  margin: 1em auto;
 }
 
 @media (min-width: 800px) {
@@ -399,6 +396,8 @@ li {
 img.project-image {
   height: 300px;
 }
+
+
 
 .card {
   max-width: 500px;
@@ -485,8 +484,8 @@ a.contact {
     position: relative;
     grid-template-columns: 250px 1fr;
     grid-template-areas:
-      "img list"
-      "img buttons";
+      "img list";
+      /* "img buttons"; */
   }
 
   .footer__img {
@@ -499,6 +498,7 @@ a.contact {
     display: grid;
     grid-template-columns: 350px 150px;
     justify-content: space-evenly;
+    row-gap: 2.5em;
     position: relative;
     left: -2em;
   }
