--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,7 @@
           <li class="nav__item">
             <a href="#work" class="nav__link">My work</a>
           </li>
-          
+
         </ul>
 
         <div class="hamburger">
@@ -117,7 +117,7 @@
           (Office Administrator with Techknowledgy) program at BCIT. In this
           program, I became a certified specialist with Microsoft Office suite.
           More importantly, I learned some basic Front-end programming in HTML
-          and CSS. This helped me discover my inner passion for programming.
+          and CSS. This helped me to discover my inner passion for programming.
         </p>
         <!-- link to idsp project -->
         <p>
