--- a/views/note.ejs
+++ b/views/note.ejs
@@ -7,3 +7,9 @@
         <img class="download-icon" src="/icons/download.svg" alt="downlaod icon"> Download this portfolio as PDF
     </button>
   </div>
+
+  <span class="hover-show">
+    <%if(project.url){%>
+    <%=project.url%>
+    <%}%>
+  </span>
