--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Jane Liang</title>
+    <link rel="icon" type="image/x-ion" href="/images/logo-square.jpg">
     <link rel="stylesheet" href="/style.css">
     <script defer src="/index.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
@@ -156,15 +157,10 @@
         <div class="card">
         <a class="image-box" href="/project/<%=project.id%>">  
           <img class="project-image" src="<%= project.images[0]%>"> 
-          <span class="show-detail">Click to see project detail</span>
+          <span class="show-detail">See detail</span>
         </a>
         <a class="project-name" href="<%=project.url%>">  
           <%= project.name%> 
-          <span class="hover-show">
-            <%if(project.url){%>
-            <%=project.url%>
-            <%}%>
-          </span>
         </a>
         </div>
         <%}%>
