--- a/public/style.css
+++ b/public/style.css
@@ -518,9 +518,22 @@ a.contact {
 
 /* project single page */
 
-.video {
+div.video-container {
   margin: 1em auto;
+  position: relative;
+  width:100%;
+  padding-bottom: 56.25%;
+  height: 0;
 }
+
+div.video-container iframe {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+}
+
 
 a.project-title{
   text-decoration: none;
