--- a/views/project.ejs
+++ b/views/project.ejs
@@ -55,7 +55,8 @@
     <!-- introduction -->
     <section class="intro" id="home">
       <h1 class="section__title section__title--intro">
-        Hi, I am <strong>Jane Liang </strong>
+        Hi, I am 
+        <strong>Jane Liang </strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">
         Aspiring Full-Stack Web Developer
@@ -69,7 +70,7 @@
 
     <!-- show project -->
 
-    <section class="my-project">
+    <section id="project-detail" class="my-project">
       <a class="project-title" href="<%=project.url%>" ><h2><%=project.name%></h2></a>
       <%if(project.partner) {%>
       <p>Partner: <%=project.partner%></p>
